--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Testing</title>
 </head>
 <body>
-    <h1>Testing</h1>
-    
+    <p>Updates..</p>
+    <h1>Up down</h1>
 </body>
 </html>
